[package]
name = "intan_importer"
version = "0.2.2"
edition = "2021"
description = "A Rust library for importing and processing Intan RHS data files for neural recording research"
authors = ["JB"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brant01/intan_importer.git"
documentation = "https://docs.rs/intan_importer"
keywords = ["neuroscience", "electrophysiology", "intan", "data-analysis", "neural-recording"]
categories = ["science", "parsing", "data-structures"]

exclude = [
    ".gitignore", 
    ".DS_Store",
    "data/",
    "tests/", 
    "*.rhs",
    ".git/",
    ".github/",
    "target/",
    "Cargo.lock"
]

[dependencies]
byteorder = "1.5.0"
ndarray = { version = "0.16.1", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[bench]]
name = "read_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true          
codegen-units = 1   
strip = true        
